# datahouse-on-a-lake

./: pyproject.toml  requirements.txt
iris-prediction-with-tensorflow/: README.md  pyproject.toml  setup.cfg  setup.py
iris-prediction-with-tensorflow/iris_prediction_with_tensorflow/: assets.py
