[tool.poetry]
name = "datahouse-on-a-lake"
version = "0.1.0"
description = ""
authors = ["Norbert Parti <norbertparti07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dagster = "^1.7.16"
dagster-webserver = "^1.7.16"
pandas = "^2.2.2"
dagster-deltalake = "^0.23.16"
dagster-deltalake-pandas = "^0.23.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
